changes on May 30th

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header") %>
 
 <header class="jumbotron">
-	<h1>Welcome to YelpCamp!</h1>
+	<h1><i class="fas fa-campground"></i> Welcome to YelpCamp!</h1>
 	<!-- Leave space on edge for smaller sized screen -->
 	<div class="container">
 		<p>View our hand-picked campgrounds from all over the world</p>
