--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,9 +18,9 @@
 				<h4><a><%= campground.name %></a></h4>
 				<p><%- campground.description %></p>
 				<p>
-				  <em>Submitted by: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
+					<em>Submitted by: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
 				</p>
-				<% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+				<% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
 					<a class="btn btn-xs btn-warning" role="button" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
 					<form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
 						<button class="btn btn-xs btn-danger">Delete</button>
@@ -42,9 +42,9 @@
 						<p>
 							<%= comment.text %>
 						</p>
-						<% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+						<% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
 							<a class="btn btn-xs btn-warning" 
-							   href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit
+								href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit
 							</a>
 							<form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE", method="POST">
 								<input type="submit" class="btn btn-xs btn-danger" value="Delete">
