--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.4.0/css/all.min.css">
 	</head>
 	<body>
 		<!-- navbar -->
@@ -41,14 +42,14 @@
 		</nav>
 		<div class="container">
 			<% if(error && error.length > 0){ %>
-			<div class="alert alert-danger" role="alert">
-				<%= error %>
-			</div>
+				<div class="alert alert-danger" role="alert">
+					<%= error %>
+				</div>
 			<% } %>
 			<% if(success && success.length > 0){ %>
-			<div class="alert alert-success" role="alert">
-				<%= success %>
-			</div>
+				<div class="alert alert-success" role="alert">
+					<%= success %>
+				</div>
 			<% } %>
 		</div>
 		<div class="container">
