--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -19,7 +19,7 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: 0; /* make black background color behind the slide show*/
+	z-index: 0;
 	list-style: none;
 	margin: 0;
 	padding: 0;
