Add reset password feature

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,7 @@
 			</div>	
 		</form>
 		<a href="/campgrounds">Go Back</a>
+		<a class="pull-right" href="/forgot">Forgot your password?</a>
 	</div>
 </div>
 
