--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,9 @@
 				<input class="form-control" type="password" name="password" placeholder="password">
 			</div>
 			<div class="form-group">
+				<input class="form-control" type="email" name="email" placeholder="email">
+			</div>
+			<div class="form-group">
 				<input class="form-control" type="text" name="adminCode" placeholder="Admin code">
 			</div>
 			<div class="form-group">
