--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,16 +7,23 @@
 		<p>
 			<a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Camground</a>
 		</p>
+		<p>
+			<form action="/campgrounds" method="GET" class="form-inline">
+				<div class="form-group">
+					<input type="text" name="search" placeholder="Campground search..." class="form-control">
+					<input type="submit" value="Search" class="btn btn-default">
+				</div>
+			</form>
+		</p>
 	</div>
 </header>
-
-<div class="row">
-	<div class="col-lg-12">
-		<h3>Our most popular Campgrounds!</h3>
-	</div>
-</div>
 	
 <div class="row text-center" style="display:flex; flex-wrap:wrap;">
+	<div class="col-md-12">
+		<% if(noMatch !== null) { %>
+			<h3><%= noMatch %></h3>
+		<% } %>
+	</div>
 	<% campgrounds.forEach(function(campground){ %>
 		<div class="col-md-3 col-sm-6"> 
 			<div class="thumbnail">
