Migrate to Bootstrap 4

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,13 +5,13 @@
 	<div class="container">
 		<p>View our hand-picked campgrounds from all over the world</p>
 		<p>
-			<a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Camground</a>
+			<a class="btn-primary btn-lg" href="/campgrounds/new">Add New Camground</a>
 		</p>
 		<p>
 			<form action="/campgrounds" method="GET" class="form-inline">
 				<div class="form-group">
 					<input type="text" name="search" placeholder="Campground search..." class="form-control">
-					<input type="submit" value="Search" class="btn btn-default">
+					<input type="submit" value="Search" class="btn-default ml-2">
 				</div>
 			</form>
 		</p>
@@ -25,14 +25,12 @@
 		<% } %>
 	</div>
 	<% campgrounds.forEach(function(campground){ %>
-		<div class="col-md-3 col-sm-6"> 
-			<div class="thumbnail">
-				<img src="<%= campground.image %>">
-				<div class="caption">
-					<h4><%= campground.name %></h4>
-					<p>
-						<a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
-					</p>
+		<div class="col-lg-3 col-md-4 col-sm-6 mb-4"> 
+			<div class="card">
+				<img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.name %>">
+				<div class="card-body">
+					<h5 class="card-title"><%= campground.name %></h5>
+					<a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
 				</div>
 			</div>
 		</div>
