--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,9 +1,11 @@
 <%- include("../partials/header") %> 
 
-<div class="row">
-	<h1 style="text-align: center;">Edit Camprgound:</h1>
-	<h3 style="text-align: center;"><%= campground.name %></h3>
-	<div style="width: 30%; margin: 25px auto;">
+<div class="row justify-content-center">
+	<div class="col-md-12 text-center">
+		<h1>Edit Camprgound:</h1>
+		<h3><%= campground.name %></h3>
+	</div>
+	<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
 		<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
 			<div class="form-group">
 				<input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
