--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,57 +2,58 @@
 
 <div class="row">
 	<div class="col-md-3">
-		<p class="lead">YelpCamp</p>
-		<div class="list-group">
-			<li class="list-group-item active">Info 1</li>
-			<li class="list-group-item">Info 2</li>
-			<li class="list-group-item">Info 3</li>
-			<div id="map"></div>
-		</div>
+		<div id="map"></div>
 	</div>
 	<div class="col-md-9">
-		<div class="thumbnail">
-			<img img="img-responsive" src="<%= campground.image %>">
-			<div class="caption">
-				<h4 class="pull-right">$<%= campground.price%>/night</h4>
-				<h4><a><%= campground.name %></a></h4>
-				<p><%- campground.description %></p>
+		<div class="card mb-3">
+			<img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.name %>">
+			<div class="card-body">
+				<h5 class="float-right">$<%= campground.price%>/night</h5>
+				<h5 class="card-title"><%= campground.name %></h5>
 				<p>
 					<em>Submitted by: <a href="/users/<%= campground.author.id%>"><%= campground.author.username %></a>, <%= moment(campground.createdAt).fromNow() %></em>
 				</p>
+				<hr>
+				<p class="card-text"><%- campground.description %></p>
 				<% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
-					<a class="btn btn-xs btn-warning" role="button" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+					<a class="btn btn-sm btn-warning" role="button" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
 					<form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-						<button class="btn btn-xs btn-danger">Delete</button>
+						<button class="btn btn-sm btn-danger">Delete</button>
 					</form>
 				<% } %>
 			</div>
 		</div>
-		<div class="well">
-			<div class="text-right">
-				<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
-			</div>
-			<hr>
-			<!-- display all comments -->
-			<% campground.comments.forEach(function(comment){ %>
-				<div class="row">
-					<div class="col-md-12">
-						<strong><%= comment.author.username %></strong>
-						<span class="pull-right"><%= moment(comment.createdAt).fromNow() %></span>
-						<p>
-							<%= comment.text %>
-						</p>
-						<% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
-							<a class="btn btn-xs btn-warning" 
-								href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit
-							</a>
-							<form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE", method="POST">
-								<input type="submit" class="btn btn-xs btn-danger" value="Delete">
-							</form>
-						<% } %>
-					</div>
+		<div class="card mb-3">
+			<div class="card-body">
+				<div class="text-right">
+					<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
 				</div>
-			<% }) %>
+				<hr>
+				<!-- display all comments -->
+				<% campground.comments.forEach(function(comment){ %>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card mb-2">
+								<div class="card-body">
+									<p class="float-right"><%= moment(comment.createdAt).fromNow() %></p>
+									<p class="card-title"><%= comment.author.username %></p>
+									<hr>
+									<p class="card-text"><%= comment.text %></p>
+									<div class="float-right">
+										<% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
+											<a class="btn btn-sm btn-warning" 
+									href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit</a>
+											<form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE", method="POST">
+												<input type="submit" class="btn btn-sm btn-danger" value="Delete">
+											</form>
+										<% } %>
+									</div>
+								</div>
+							</div>					
+						</div>
+					</div>
+				<% }) %>
+			</div>
 		</div>
 	</div>
 </div>
