--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,36 @@
 <%- include("./partials/header") %> 
 
 <div class="row">
-	<h1 style="text-align: center">Sign Up</h1>
-	<div style="width: 30%; margin: 25px auto;">
-		<form action="/register" method="post">
-			<div class="form-group">
-				<input class="form-control" type="text" name="username" placeholder="username">
-			</div>
-			<div class="form-group">
-			<input class="form-control" type="password" name="password" placeholder="password">
-			</div>			
-			<div class="form-group">
-				<input class="form-control" type="text" name="firstName" placeholder="first name">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="text" name="lastName" placeholder="last name">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="email" name="email" placeholder="email">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="text" name="avatar" placeholder="avatar url">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="text" name="adminCode" placeholder="admin code">
-			</div>
-			<div class="form-group">
-				<button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
-			</div>
+	<div class="col-md-12">
+		<form class="form-signin" action="/login" method="POST">
+  			<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+			
+			<label for="inputFirstName" class="sr-only">First name</label>		
+			<input type="text" id="inputFirstname" class="form-control" name="firstName" placeholder="First name" required autofocus>
+			
+			<label for="inputLastName" class="sr-only">Last name</label>	
+			<input type="text" id="inputLastname" class="form-control" name="lastName" placeholder="Last name" required autofocus>
+			
+			<label for="inputEmail" class="sr-only">Email address</label>
+			<input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email address" required autofocus>
+			
+			<label for="inputAvatar" class="sr-only">Avatar url</label>
+			<input type="text" id="inputAvatar" class="form-control" name="avatar" placeholder="Avatar url" required autofocus>
+			
+			<label for="inputAdminCode" class="sr-only">Admin code</label>
+			<input type="text" id="inputAdminCode" class="form-control" name="adminCode" placeholder="Admin code" required autofocus>
+			
+			<label for="inputUsername" class="sr-only">Username</label>
+			<input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
+			
+  			<label for="inputPassword" class="sr-only">Password</label>
+  			<input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+			
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
 		</form>
-		<a href="/campgrounds">Go Back</a>
+		<form class="form-signin">
+			<a href="/campgrounds">Go Back</a>
+		</form>
 	</div>
 </div>
 
