--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -41,8 +41,7 @@
 									<p class="card-text"><%= comment.text %></p>
 									<div class="float-right">
 										<% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
-											<a class="btn btn-sm btn-warning" 
-									href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit</a>
+											<a class="btn btn-sm btn-warning" href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit</a>
 											<form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE", method="POST">
 												<input type="submit" class="btn btn-sm btn-danger" value="Delete">
 											</form>
