--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<form class="form-signin" action="/login" method="POST">
+		<form class="form-signin" action="/register" method="POST">
   			<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 			
 			<label for="inputFirstName" class="sr-only">First name</label>		
@@ -18,7 +18,7 @@
 			<input type="text" id="inputAvatar" class="form-control" name="avatar" placeholder="Avatar url" required autofocus>
 			
 			<label for="inputAdminCode" class="sr-only">Admin code</label>
-			<input type="text" id="inputAdminCode" class="form-control" name="adminCode" placeholder="Admin code" required autofocus>
+			<input type="text" id="inputAdminCode" class="form-control" name="adminCode" placeholder="Admin code" autofocus>
 			
 			<label for="inputUsername" class="sr-only">Username</label>
 			<input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
