--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,33 +1,61 @@
-<%- include("../partials/header") %> 
+<%- include("../partials/header") %>
 
 <div class="row justify-content-center">
-	<div class="col-md-12 text-center">
-		<h1>Create a New Campground</h1>
-	</div>
-	<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
-		<form action="/campgrounds" method="post">
-			<div class="form-group">
-				<input class="form-control" type="text" name="campground[name]" placeholder="name">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="text" name="campground[image]" placeholder="image url">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="text" name="campground[description]" placeholder="description">
-			</div>
-			<div class="form-group">
-   				<label for="location">Location</label>
-				<input class="form-control" type="text" name="campground[location]" id="location" placeholder="Yosemite National Park, CA">
-			</div>
-			<div class="form-group">
-				<button class="btn btn-lg btn-primary btn-block">Submit!</button>
-			</div>
-		</form>
-		<a href="/campgrounds">Go back</a>
-	</div>
+  <div class="col-md-12 text-center">
+    <h1>Create a New Campground</h1>
+  </div>
+  <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
+    <form action="/campgrounds" method="post">
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="campground[name]"
+          placeholder="name"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="number"
+          name="campground[price]"
+          placeholder="price"
+          min="0.01"
+          step="0.01"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="campground[image]"
+          placeholder="image url"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="campground[description]"
+          placeholder="description"
+        />
+      </div>
+      <div class="form-group">
+        <label for="location">Location</label>
+        <input
+          class="form-control"
+          type="text"
+          name="campground[location]"
+          id="location"
+          placeholder="Yosemite National Park, CA"
+        />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+      </div>
+    </form>
+    <a href="/campgrounds">Go back</a>
+  </div>
 </div>
 
 <%- include("../partials/footer") %>
