--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,60 +1,99 @@
 <%- include("../partials/header") %>
 
 <div class="row">
-	<div class="col-md-3">
-		<div id="map"></div>
-	</div>
-	<div class="col-md-9">
-		<div class="card mb-3">
-			<img src="<%= campground.image %>" class="card-img-top" alt="<%= campground.name %>">
-			<div class="card-body">
-				<h5 class="float-right">$<%= campground.price%>/night</h5>
-				<h5 class="card-title"><%= campground.name %></h5>
-				<p>
-					<em>Submitted by: <a href="/users/<%= campground.author.id%>"><%= campground.author.username %></a>, <%= moment(campground.createdAt).fromNow() %></em>
-				</p>
-				<hr>
-				<p class="card-text"><%- campground.description %></p>
-				<% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
-					<a class="btn btn-sm btn-warning" role="button" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-					<form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-						<button class="btn btn-sm btn-danger">Delete</button>
-					</form>
-				<% } %>
-			</div>
-		</div>
-		<div class="card mb-3">
-			<div class="card-body">
-				<div class="text-right">
-					<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
-				</div>
-				<hr>
-				<!-- display all comments -->
-				<% campground.comments.forEach(function(comment){ %>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="card mb-2">
-								<div class="card-body">
-									<p class="float-right"><%= moment(comment.createdAt).fromNow() %></p>
-									<p class="card-title"><%= comment.author.username %></p>
-									<hr>
-									<p class="card-text"><%= comment.text %></p>
-									<div class="float-right">
-										<% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
-											<a class="btn btn-sm btn-warning" href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">Edit</a>
-											<form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE", method="POST">
-												<input type="submit" class="btn btn-sm btn-danger" value="Delete">
-											</form>
-										<% } %>
-									</div>
-								</div>
-							</div>					
-						</div>
-					</div>
-				<% }) %>
-			</div>
-		</div>
-	</div>
+  <div class="col-md-3">
+    <div id="map"></div>
+  </div>
+  <div class="col-md-9">
+    <div class="card mb-3">
+      <img
+        src="<%= campground.image %>"
+        class="card-img-top"
+        alt="<%= campground.name %>"
+      />
+      <div class="card-body">
+        <h5 class="float-right">$<%= campground.price%>/night</h5>
+        <h5 class="card-title"><%= campground.name %></h5>
+        <p>
+          <em
+            >Submitted by:
+            <a href="/users/<%= campground.author.id%>"
+              ><%= campground.author.username %></a
+            >, <%= moment(campground.createdAt).fromNow() %></em
+          >
+        </p>
+        <hr />
+        <p class="card-text"><%- campground.description %></p>
+        <% if(currentUser && campground.author.id.equals(currentUser._id) ||
+        currentUser && currentUser.isAdmin){ %>
+        <a
+          class="btn btn-sm btn-warning"
+          role="button"
+          href="/campgrounds/<%= campground._id %>/edit"
+          >Edit</a
+        >
+        <form
+          class="delete-form"
+          action="/campgrounds/<%= campground._id %>?_method=DELETE"
+          method="POST"
+        >
+          <button class="btn btn-sm btn-danger">Delete</button>
+        </form>
+        <% } %>
+      </div>
+    </div>
+    <div class="card mb-3">
+      <div class="card-body">
+        <div class="text-right">
+          <a
+            class="btn btn-success"
+            href="/campgrounds/<%= campground._id %>/comments/new"
+            >Add New Comment</a
+          >
+        </div>
+        <hr />
+        <!-- display all comments -->
+        <% campground.comments.forEach(function(comment){ %>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card mb-2">
+              <div class="card-body">
+                <p class="float-right">
+                  <%= moment(comment.createdAt).fromNow() %>
+                </p>
+                <p class="card-title"><%= comment.author.username %></p>
+                <hr />
+                <p class="card-text"><%= comment.text %></p>
+                <div class="float-right">
+                  <% if(currentUser && comment.author.id.equals(currentUser._id)
+                  || currentUser && currentUser.isAdmin){ %>
+                  <a
+                    class="btn btn-sm btn-warning"
+                    href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit"
+                    >Edit</a
+                  >
+                  <form
+                    class="delete-form"
+                    action="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>?_method=DELETE"
+                    ,
+                    method="POST"
+                  >
+                    <input
+                      type="submit"
+                      class="btn btn-sm btn-danger"
+                      value="Delete"
+                    />
+                  </form>
+                  <% } %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% }) %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -84,6 +123,10 @@
     });
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcmdzhdjfryLY7uRMUWMzWQiorpyyNkx8&callback=initMap"></script>
+<script
+  async
+  defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcmdzhdjfryLY7uRMUWMzWQiorpyyNkx8&callback=initMap"
+></script>
 
 <%- include("../partials/footer") %>
