--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,20 +1,28 @@
-<%- include("../partials/header") %> 
+<%- include("../partials/header") %>
 
 <div class="row justify-content-center">
-	<div class="col-md-12 text-center">
-		<h1>Edit Comment</h1>
-	</div>
-	<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
-		<form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id%>?_method=PUT" method="POST">
-			<div class="form-group">
-				<input class="form-control" type="text" name="comment[text]" value="<%= comment.text%>">
-			</div>
-			<div class="form-group">
-				<button class="btn btn-lg btn-primary btn-block">Submit!</button>
-			</div>
-		</form>
-		<a href="/campgrounds">Go back</a>
-	</div>
+  <div class="col-md-12 text-center">
+    <h1>Edit Comment</h1>
+  </div>
+  <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
+    <form
+      action="/campgrounds/<%= campground_id %>/comments/<%= comment._id%>?_method=PUT"
+      method="POST"
+    >
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="comment[text]"
+          value="<%= comment.text%>"
+        />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+      </div>
+    </form>
+    <a href="/campgrounds">Go back</a>
+  </div>
 </div>
 
 <%- include("../partials/footer") %>
