--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,57 +1,78 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Make site responsive on mobile/tablet -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>YelpCamp</title>
-		<!-- Add in Bootstrap -->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-		<link rel="stylesheet" href="/stylesheets/main.css">
-		<!-- Add in font awesome icon -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.4.0/css/all.min.css">
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-			<a class="navbar-brand" href="/">YelpCamp</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>">
-						<a class="nav-link" href="/campgrounds">Home</a>
-					</li>
-				</ul>
-				<ul class="navbar-nav">
-					<% if(!currentUser){ %>
-						<li class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
-							<a class="nav-link" href="/login">Login</a>
-						</li> 
-						<li class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>">
-							<a class="nav-link" href="/register">Sign Up</a>
-						</li>
-					<% } else { %>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Signed In As <%= currentUser.username %></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/logout">Logout</a>
-						</li>
-					<% } %>
-				</ul>
-			</div>
-		</nav>
-		<div class="container">
-			<% if(error && error.length > 0){ %>
-				<div class="alert alert-danger" role="alert">
-					<%= error %>
-				</div>
-			<% } %>
-			<% if(success && success.length > 0){ %>
-				<div class="alert alert-success" role="alert">
-					<%= success %>
-				</div>
-			<% } %>
-		</div>
-		<div class="container">
+  <head>
+    <!-- Make site responsive on mobile/tablet -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>YelpCamp</title>
+    <!-- Add in Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <!-- Add in font awesome icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <a class="navbar-brand" href="/">YelpCamp</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+        aria-controls="navbarCollapse"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"
+          >
+            <a class="nav-link" href="/campgrounds">Home</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <% if(!currentUser){ %>
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"
+          >
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"
+          >
+            <a class="nav-link" href="/register">Sign Up</a>
+          </li>
+          <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="#"
+              >Signed In As <%= currentUser.username %></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          <% } %>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <% if(error && error.length > 0){ %>
+      <div class="alert alert-danger" role="alert"><%= error %></div>
+      <% } %> <% if(success && success.length > 0){ %>
+      <div class="alert alert-success" role="alert"><%= success %></div>
+      <% } %>
+    </div>
+    <div class="container"></div>
+  </body>
+</html>
