--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,37 +1,93 @@
-<%- include("./partials/header") %> 
+<%- include("./partials/header") %>
 
 <div class="row">
-	<div class="col-md-12">
-		<form class="form-signin" action="/register" method="POST">
-  			<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
-			
-			<label for="inputFirstName" class="sr-only">First name</label>		
-			<input type="text" id="inputFirstname" class="form-control" name="firstName" placeholder="First name" required autofocus>
-			
-			<label for="inputLastName" class="sr-only">Last name</label>	
-			<input type="text" id="inputLastname" class="form-control" name="lastName" placeholder="Last name" required autofocus>
-			
-			<label for="inputEmail" class="sr-only">Email address</label>
-			<input type="email" id="inputEmail" class="form-control" name="email" placeholder="Email address" required autofocus>
-			
-			<label for="inputAvatar" class="sr-only">Avatar url</label>
-			<input type="text" id="inputAvatar" class="form-control" name="avatar" placeholder="Avatar url" required autofocus>
-			
-			<label for="inputAdminCode" class="sr-only">Admin code</label>
-			<input type="text" id="inputAdminCode" class="form-control" name="adminCode" placeholder="Admin code" autofocus>
-			
-			<label for="inputUsername" class="sr-only">Username</label>
-			<input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
-			
-  			<label for="inputPassword" class="sr-only">Password</label>
-  			<input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-			
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-		</form>
-		<form class="form-signin">
-			<a href="/campgrounds">Go Back</a>
-		</form>
-	</div>
+  <div class="col-md-12">
+    <form class="form-signin" action="/register" method="POST">
+      <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+
+      <label for="inputFirstName" class="sr-only">First name</label>
+      <input
+        type="text"
+        id="inputFirstname"
+        class="form-control"
+        name="firstName"
+        placeholder="First name"
+        required
+        autofocus
+      />
+
+      <label for="inputLastName" class="sr-only">Last name</label>
+      <input
+        type="text"
+        id="inputLastname"
+        class="form-control"
+        name="lastName"
+        placeholder="Last name"
+        required
+        autofocus
+      />
+
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input
+        type="email"
+        id="inputEmail"
+        class="form-control"
+        name="email"
+        placeholder="Email address"
+        required
+        autofocus
+      />
+
+      <label for="inputAvatar" class="sr-only">Avatar url</label>
+      <input
+        type="text"
+        id="inputAvatar"
+        class="form-control"
+        name="avatar"
+        placeholder="Avatar url"
+        required
+        autofocus
+      />
+
+      <label for="inputAdminCode" class="sr-only">Admin code</label>
+      <input
+        type="text"
+        id="inputAdminCode"
+        class="form-control"
+        name="adminCode"
+        placeholder="Admin code"
+        autofocus
+      />
+
+      <label for="inputUsername" class="sr-only">Username</label>
+      <input
+        type="text"
+        id="inputUsername"
+        class="form-control"
+        name="username"
+        placeholder="Username"
+        required
+        autofocus
+      />
+
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        class="form-control"
+        name="password"
+        placeholder="Password"
+        required
+      />
+
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Sign up
+      </button>
+    </form>
+    <form class="form-signin">
+      <a href="/campgrounds">Go Back</a>
+    </form>
+  </div>
 </div>
 
 <%- include("./partials/footer") %>
