--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -123,10 +123,6 @@
     });
   }
 </script>
-<script
-  async
-  defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcmdzhdjfryLY7uRMUWMzWQiorpyyNkx8&callback=initMap"
-></script>
+<script async defer src="process.env.MAP_API_KEY"></script>
 
 <%- include("../partials/footer") %>
