--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -123,6 +123,10 @@
     });
   }
 </script>
-<script async defer src="process.env.MAP_API_KEY"></script>
+<script
+  async
+  defer
+  src="https://maps.googleapis.com/maps/api/js?key=${process.env.MAP_API_KEY}&callback=initMap"
+></script>
 
 <%- include("../partials/footer") %>
