--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header") %> <%-require('dotenv').config() %>
+<%- include("../partials/header") %>
 
 <div class="row">
   <div class="col-md-3">
